arkts_static_test/03_Types/ets_cases/3.21.4_Required_Utility_Type/compile-fail/TYP_03_21_04_006_FAIL_REQUIRED_NON_CLASS.ets
/**
 * @id TYP_03_21_04_006_FAIL_REQUIRED_NON_CLASS
 * @expect compile-fail
 * @section 3.21.4
 * @design Required 应用于非 class/interface 应编译错误
 * @note 反向用例：spec 要求
 */
type Bad6 = Required<int>